--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <img id="profile-image" src="perfil.jpg" alt="Foto de Perfil">
         <h2>Dados Pessoais</h2>
         <p>Nome: Lucas Da Cruz Blank</p>
-        <p>Endereço: Rua Manoel Carlos Daussen,157. Palhoça, Caminho novo</p>
+        <p>Endereço: Rua Manoel Carlos Daussen,157 (Caminho Novo). Palhoça-Sc </p>
         <p>E-mail: lucasblank1@outlook.com</p>
         <p>Telefone: (53) 98118-4611</p>
 
